--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <span id="text">Абракадабра!</span>
 <!----------task-8----------->
 <div id="controls">
-    <input type="number" min="0" max="100" step="1" />
+    <input type="number" min="0" max="100" step="1" value />
     <button type="button" data-action="render">Создать</button>
     <button type="button" data-action="destroy">Очистить</button>
 </div>
